# 3331506-80401-Dolgov-Sergey-s-works

./: .gitignore  3 Отчёт Долгов Сергей 3331506 80401.docx  LICENSE  README.md  main.c  project_for_keil_4.uvopt  project_for_keil_4.uvproj  project_for_keil_5.uvoptx  project_for_keil_5.uvprojx
.circleci/: Dockerfile  config.yml
.test/: CMakeLists.txt  compile_tests.sh  date_checker.sh  pvs_check.sh  run_tests.sh  tests.c
src/main/: main.c
untitled16/: CMakeLists.txt  main.c
untitled2/: main.c
